[package]
name = "rust-python"
version = "0.1.0"
authors = ["lfn3 <liam@lfn3.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = "0.10"
tokio = { version = "0.2", features = ["macros", "sync", "rt-threaded", "blocking"] }
warp = "0.2"
http = "0.2"
futures = "0.3.5"